--- a/nb-NO/suite/chrome/common/notification.properties
+++ b/nb-NO/suite/chrome/common/notification.properties
@@ -119,17 +119,18 @@ lwthemeNeedsRestart.restartButton=Start på nytt nå
 lwthemeNeedsRestart.restartButton.accesskey=S
 
 # Geolocation UI
-# LOCALIZATION NOTE (geolocation.shareLocation geolocation.dontShareLocation): 
-#If you're having trouble with the word Share, please use Allow and Block in your language.
+# LOCALIZATION NOTE (geolocation.shareLocation geolocation.dontShareThisRequest geolocation.alwaysShareForSite geolocation.neverShareForSite):
+#shareLocation is always visible, other entries are contextually relative to it
+#if this doesn't work for your language, use explicit Share or Allow/Block.
 geolocation.shareLocation=Tillat stedsangivelse
 geolocation.shareLocation.accesskey=T
-geolocation.dontShareLocation=Ikke tillat
-geolocation.dontShareLocation.accesskey=I
-geolocation.alwaysShareLocation=Alltid del
-geolocation.alwaysShareLocation.accesskey=A
-geolocation.neverShareLocation=Aldri del
-geolocation.neverShareLocation.accesskey=d
-geolocation.siteWantsToKnow=%S ønsker å vite hvor du er.
+geolocation.dontShareThisRequest=Ikke for denne forespørselen
+geolocation.dontShareThisRequest.accesskey=I
+geolocation.alwaysShareForSite=Alltid for dette nettstedet
+geolocation.alwaysShareForSite.accesskey=A
+geolocation.neverShareForSite=Aldri for dette nettstedet
+geolocation.neverShareForSite.accesskey=d
+geolocation.siteWantsToKnow=Dette nettstedet (%S) ønsker å vite hvor du er.
 geolocation.fileWantsToKnow=Filen %S ønsker å vite hvor du er.
 # LOCALIZATION NOTE (geolocation.learnMore): Use the unicode ellipsis char, \u2026,
 # or use "..." unless \u2026 doesn't suit traditions in your locale.
@@ -137,26 +138,30 @@ geolocation.learnMore=Les mer …
 geolocation.remember=Husk valget for dette nettstedet
 
 # Desktop Notifications
+# LOCALIZATION NOTE (webnotifications.showForSession webnotifications.dontShowThisSession webnotifications.alwaysShowForSite webnotifications.neverShowForSite):
+#showForSession is always visible, other entries are contextually relative to it
+#if this doesn't work for your language, use explicit Show or Allow/Block.
 webNotifications.showForSession=Vis varsler
 webNotifications.showForSession.accesskey=V
-webNotifications.dontShowForSession=Ikke vis
-webNotifications.dontShowForSession.accesskey=k
-webNotifications.alwaysShow=Alltid vis
-webNotifications.alwaysShow.accesskey=A
-webNotifications.neverShow=Aldri vis
-webNotifications.neverShow.accesskey=d
+webNotifications.dontShowThisSession=Ikke for denne økten
+webNotifications.dontShowThisSession.accesskey=k
+webNotifications.alwaysShowForSite=Alltid for dette nettstedet
+webNotifications.alwaysShowForSite.accesskey=A
+webNotifications.neverShowForSite=Aldri vis for dette nettstedet
+webNotifications.neverShowForSite.accesskey=d
 webNotifications.showFromSite=Vil du vise varsler fra %S?
 webNotifications.remember=Husk for dette nettstedet
 
 # IndexedDB
 offlineApps.permissions=Dette nettstedet (%S) ber om å lagre data på datamaskinen din for frakoblet bruk.
+offlineApps.private=Du er i et privat vindu. Dette nettstedet (%S) har ikke tillatelse til å lagre data på datamaskinen din for frakoblet bruk.
 offlineApps.quota=Dette nettstedet (%1$S) forsøker å lagre mer enn %2$S MB data på datamaskinen for frakoblet bruk.
-offlineApps.allow=Tillat
-offlineApps.allow.accesskey=T
+offlineApps.always=Alltid tillat
+offlineApps.always.accesskey=A
 offlineApps.later=Ikke nå
-offlineApps.later.accesskey=I
-offlineApps.deny=Aldri for dette nettstedet
-offlineApps.deny.accesskey=d
+offlineApps.later.accesskey=k
+offlineApps.never=Aldri for dette nettstedet
+offlineApps.never.accesskey=d
 
 # Block autorefresh
 refreshBlocked.goButton=Tillat
@@ -184,10 +189,10 @@ BlockedActiveContentMessage=Usikker informasjon på denne nettsiden ble blokkert
 BlockedDisplayContentMessage=Ukryptert informasjon på denne siden ble blokkert.
 EnterInsecureMessage=Du har forlatt en kryptert nettside. Informasjon som du sender eller mottar fra nå av kan enkelt leses av en tredjepart.
 EnterSecureMessage=Du har forespurt en kryptert nettside. Nettsiden har identifisert seg riktig, og informasjon som du ser eller skriver inn på denne siden kan ikke enkelt leses av en tredjepart.
-SecurityKeepBlocking.label=Keep Blocking
-SecurityKeepBlocking.accesskey=K
-SecurityUnblock.label=Unblock
-SecurityUnblock.accesskey=U
+SecurityKeepBlocking.label=Fortsett blokkering
+SecurityKeepBlocking.accesskey=F
+SecurityUnblock.label=Opphev blokkering
+SecurityUnblock.accesskey=O
 SecurityPreferences.label=Innstillinger
 SecurityPreferences.accesskey=n
 PostToInsecureFromInsecureMessage=Informasjonen du har skrevet inn vil sendes over en ukryptert forbindelse og kan enkelt leses av en tredjepart.\nEr du sikker på at du vil fortsette sende denne infoen?
