--- a/nb-NO/suite/chrome/common/pref/prefutilities.properties
+++ b/nb-NO/suite/chrome/common/pref/prefutilities.properties
@@ -7,7 +7,7 @@ cachefolder=Velg mappe for hurtiglager
 cacheSizeInfo=Hurtiglageret bruker nå %1$S %2$S diskplass.
 
 # Offline apps
-appCacheSizeInfo=Applikasjons-hurtiglageret bruker nå %1$S %2$S diskplass.
+offlineAppSizeInfo=Frakoblet datalager bruker nå %1$S %2$S diskplass.
 offlineAppRemoveTitle=Fjern frakoblede nettsidedata
 offlineAppRemovePrompt=Etter at du fjerner disse dataene vil %S ikke være tilgjengelig i frakoblet modus.  Er du sikker på at du vil fjerne disse frakoblede dataene?
 offlineAppRemoveConfirm=Fjern frakoblede data
