--- a/nb-NO/suite/chrome/mailnews/compose/composeMsgs.properties
+++ b/nb-NO/suite/chrome/mailnews/compose/composeMsgs.properties
@@ -250,7 +250,9 @@ copyMessageStart=Kopierer melding til mappen %S …
 copyMessageComplete=Kopiering fullført.
 copyMessageFailed=Kopiering mislykket.
 
-sendLargeMessageWarning=Advarsel! Du vil nå sende en melding som er %d bytes. Er du sikker på at du ønsker gjøre dette?
+## LOCALIZATION NOTE (largeMessageSendWarning):
+## %S is the message size in user-friendly notation. Do not translate.
+largeMessageSendWarning=Advarsel! Du vil nå sende en melding som har størrelse %S, som kan være større enn det e-postserveren tillater. Er du sikker på at du ønsker gjøre dette?
 
 sendingMessage=Sender melding …
 sendMessageErrorTitle=Feil ved sending av melding
