--- a/nb-NO/suite/chrome/mailnews/textImportMsgs.properties
+++ b/nb-NO/suite/chrome/mailnews/textImportMsgs.properties
@@ -15,7 +15,7 @@
 # Description of import module
 ## @name TEXTIMPORT_DESCRIPTION
 ## @loc None
-2001=Importerer en adressebok fra tekstfil, blant annet\: LDIF (.ldif, .ldi), tab-avgrenset (.tab, .txt) eller komma-separert (.csv) formater.
+2001=Importerer en adressebok fra tekstfil, blant annet: LDIF (.ldif, .ldi), tab-avgrenset (.tab, .txt) eller komma-separert (.csv) formater.
 
 # Description of import module
 ## @name TEXTIMPORT_ADDRESS_NAME
