One new string in loop

--- a/es-CL/browser/chrome/browser/loop/loop.properties
+++ b/es-CL/browser/chrome/browser/loop/loop.properties
@@ -70,6 +70,7 @@ initiate_call_button_label2=¿Listo para comenzar su conversación?
 incoming_call_title2=Solicitud de conversación
 incoming_call_accept_button=Aceptar
 incoming_call_accept_audio_only_tooltip=Aceptar con voz
+incoming_call_accept_audio_video_tooltip=Aceptar con video
 incoming_call_cancel_button=Cancelar
 incoming_call_cancel_and_block_button=Cancelar y bloquear
 incoming_call_block_button=Bloquear
