--- a/nb-NO/dom/chrome/security/csp.properties
+++ b/nb-NO/dom/chrome/security/csp.properties
@@ -65,6 +65,9 @@ scriptFromStringBlocked = Et forsøk på å kalle JavaScript fra en tekststreng 
 # LOCALIZATION NOTE (hostNameMightBeKeyword):
 # %1$S is the hostname in question and %2$S is the keyword
 hostNameMightBeKeyword = Tolker %1$S som et vertsnavn, ikke et nøkkelord. Dersom du mente dette som et nøkkelord, bruk '%2$S' (innsluttet i apostrofer).
+# LOCALIZATION NOTE (notSupportingDirective):
+# directive is not supported (e.g. 'reflected-xss')
+notSupportingDirective = Støtter ikke direktivet '%1$S'. Direktivet og verdiene vil ignoreres.
 
 # CSP Errors:
 policyURINotAlone = policy-uri-direktiv kan bare forekomme alene
