--- a/nb-NO/security/manager/chrome/pipnss/nsserrors.properties
+++ b/nb-NO/security/manager/chrome/pipnss/nsserrors.properties
@@ -299,3 +299,6 @@ SEC_ERROR_LOCKED_PASSWORD=Passordet er låst.
 SEC_ERROR_UNKNOWN_PKCS11_ERROR=Ukjent PKCS #11-feil.
 SEC_ERROR_BAD_CRL_DP_URL=Ugyldig eller ustøttet URL i CRL distribusjonspunktnavn.
 SEC_ERROR_CERT_SIGNATURE_ALGORITHM_DISABLED=Sertifikatet ble signert med en signaturalgoritme som er deaktivert fordi den er utrygg.
+MOZILLA_PKIX_ERROR_KEY_PINNING_FAILURE=Serveren bruker key pinning (HPKP), men ingen tiltrodde sertifikater ble funnet som passer til pin-settet. Brudd på key-pinning kan ikke overstyres.
+MOZILLA_PKIX_ERROR_CA_CERT_USED_AS_END_ENTITY=Serveren bruker et sertifikat som identifiserer det som en sertifikatutsteder. For et riktig utstedt sertifikat bør ikke dette skje.
+MOZILLA_PKIX_ERROR_INADEQUATE_KEY_SIZE=Serveren bruker et sertifikat med en nøkkelstørrelse som er for liten til å etablere en sikker tilkobling.
