--- a/nb-NO/dom/chrome/accessibility/AccessFu.properties
+++ b/nb-NO/dom/chrome/accessibility/AccessFu.properties
@@ -94,11 +94,10 @@ listEnd        =       Siste element
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 listItemsCount =       1 element;#1 elementer
 
-# LOCALIZATION NOTE: %1$S is the item's role name (e.g. "tab"),
-# %2$S is the position of the item n the set.
-# %3$S is the total number of such items in the set.
-# An expanded example would read "tab 2 of 5".
-objItemOf      =       %1$S %2$S av %3$S
+# LOCALIZATION NOTE: # %1$S is the position of the item n the set.
+# %2$S is the total number of such items in the set.
+# An expanded example would read "2 of 5".
+objItemOfN      =       %1$S av %2$S
 
 # Landmark announcements
 banner         =       banner
@@ -108,17 +107,14 @@ main           =       hoved
 navigation     =       navigasjon
 search         =       søk
 
-# Description of a table or grid:
-# 1 is a dynamically retrieved localized role of either 'table' or 'grid'.
-# 2 is the number of columns within the table.
-# 3 is the number of rows within the table or grid.
-tableInfo = %S med %S og %S
-# LOCALIZATION NOTE (tableColumnInfo): Semi-colon list of plural forms.
+# LOCALIZATION NOTE (tblColumnInfo): Semi-colon list of plural forms.
+# Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableColumnInfo = 1 kolonne;#1 kolonner
-# LOCALIZATION NOTE (tableRowInfo): Semi-colon list of plural forms.
+tblColumnInfo = med 1 kolonne;med #1 kolonner
+# LOCALIZATION NOTE (tblRowInfo): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableRowInfo = 1 rad;#1 rader
+tblRowInfo = og 1 rad;og #1 rader
 
 # table or grid cell information
 columnInfo = Kolonne %S
@@ -190,18 +186,85 @@ quicknav_Table       = Tabeller
 quicknav_Checkbox    = Sjekkbokser
 
 # Shortened role names for braille
-linkAbbr           =       lnk
-pushbuttonAbbr     =       knp
-passwordtextAbbr   =       passtkst
-imagemapAbbr       =       imgmap
-figureAbbr         =       fig
-textareaAbbr       =       tkstomr
+menubarAbbr        =       menylinje
+scrollbarAbbr      =       rullefelt
+gripAbbr           =       grip
+alertAbbr          =       varsel
+menupopupAbbr      =       meny-varsel
+documentAbbr       =       dokument
+paneAbbr           =       panel
+dialogAbbr         =       dialog
+separatorAbbr      =       skillelinje
+toolbarAbbr        =       verktøylinje
+statusbarAbbr      =       statuslinje
 tableAbbr          =       tbl
-tableInfoAbbr = %S %S %S
-# LOCALIZATION NOTE (tableColumnInfoAbbr): Semi-colon list of plural forms.
+columnheaderAbbr   =       kolonneoverskrift
+rowheaderAbbr      =       radoverskrift
+columnAbbr         =       kolonne
+rowAbbr            =       rad
+cellAbbr           =       celle
+linkAbbr           =       lnk
+listAbbr           =       liste
+listitemAbbr       =       listeelement
+outlineAbbr        =       omriss
+outlineitemAbbr    =       omrisselement
+pagetabAbbr        =       tab
+propertypageAbbr   =       egenskap-side
+graphicAbbr        =       grafikk
+pushbuttonAbbr     =       knp
+checkbuttonAbbr    =       avkryssingsboks
+radiobuttonAbbr    =       radioknapp
+comboboxAbbr       =       komboboks
+progressbarAbbr    =       fremdriftsindikator
+sliderAbbr         =       glidebryter
+spinbuttonAbbr     =       tallboks
+diagramAbbr        =       diagram
+animationAbbr      =       animasjon
+equationAbbr       =       ligning
+buttonmenuAbbr     =       knappemeny
+whitespaceAbbr     =       mellomrom
+pagetablistAbbr    =       tab-liste
+canvasAbbr         =       kanvas
+checkmenuitemAbbr  =       avkryssingselement
+labelAbbr          =       etikett
+passwordtextAbbr   =       passtkst
+radiomenuitemAbbr  =       radiomenyelement
+textcontainerAbbr  =       tekstboks
+togglebuttonAbbr   =       bryter
+treetableAbbr      =       tretabell
+headerAbbr         =       overskrift
+footerAbbr         =       bunntekst
+paragraphAbbr      =       avsnitt
+entryAbbr          =       oppføring
+captionAbbr        =       bildetekst
+headingAbbr        =       tittel
+sectionAbbr        =       seksjon
+formAbbr           =       skjema
+comboboxlistAbbr   =       komboboksliste
+comboboxoptionAbbr =       komboboksvalg
+imagemapAbbr       =       bildekart
+listboxoptionAbbr  =       valg
+listboxAbbr        =       listeboks
+flatequationAbbr   =       flat ligning
+gridcellAbbr       =       rutenettcelle
+noteAbbr           =       merknad
+figureAbbr         =       fig
+definitionlistAbbr =       definisjonsliste
+termAbbr           =       term
+definitionAbbr     =       definisjon
+textareaAbbr       =       tkstomr
+
+# LOCALIZATION NOTE (tblColumnInfoAbbr): Semi-colon list of plural forms.
+# Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableColumnInfoAbbr = #1c;#1c
-# LOCALIZATION NOTE (tableRowInfoAbbr): Semi-colon list of plural forms.
+tblColumnInfoAbbr = #1c;#1c
+# LOCALIZATION NOTE (tblRowInfoAbbr): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableRowInfoAbbr = #1r;#1r
+tblRowInfoAbbr = #1r;#1r
 cellInfoAbbr = c%Sr%S
+
+stateCheckedAbbr = (x)
+stateUncheckedAbbr = ( )
+statePressedAbbr = (x)
+stateUnpressedAbbr = ( )
