--- a/nb-NO/webapprt/webapprt/webapp.properties
+++ b/nb-NO/webapprt/webapprt/webapp.properties
@@ -40,6 +40,14 @@ webapps.install.title=Installer %S
 webapps.install.description=Vil du installere %S?
 webapps.install.install=Installer app
 webapps.install.dontinstall=Ikke installer
+# LOCALIZATION NOTE (webapps.uninstall.title): %S will be replaced with the name
+# of the webapp being uninstalled.
+webapps.uninstall.title=Avinstaller %S
+# LOCALIZATION NOTE (webapps.uninstall.description): %S will be replaced with the
+# name of the webapp being uninstalled.
+webapps.uninstall.description=Vil du avinstallere %S?
+webapps.uninstall.uninstall=Avinstaller app
+webapps.uninstall.dontuninstall=Ikke avinstaller
 
 paymentDialog.title=Betaling
 paymentDialog.message=Hvilken betalingstilbyder vil du bruke?
