--- a/nb-NO/toolkit/chrome/global/aboutSupport.properties
+++ b/nb-NO/toolkit/chrome/global/aboutSupport.properties
@@ -64,6 +64,7 @@ clearTypeParametersNotFound = ClearType-parametere ikke funnet
 adapterDescription = Adapter-beskrivelse
 adapterVendorID = Leverandør-ID
 adapterDeviceID = Enhet-ID
+adapterSubsysID = Subsys ID
 adapterDrivers = Adapter-drivere
 adapterRAM = RAM
 driverVersion = Driverversjon
@@ -71,6 +72,7 @@ driverDate = Driverdato
 adapterDescription2 = Adapterbeskrivelse (GPU #2) 
 adapterVendorID2 = Leverandør-ID (GPU #2) 
 adapterDeviceID2 = Enhet-ID (GPU #2)
+adapterSubsysID2 = Subsys ID (GPU #2)
 adapterDrivers2 = Adapterdrivere (GPU #2)
 adapterRAM2 = Minne (GPU #2)
 driverVersion2 = Driverversjon (GPU #2)
