--- a/fr/browser/chrome/browser/loop/loop.properties
+++ b/fr/browser/chrome/browser/loop/loop.properties
@@ -173,6 +173,7 @@ initiate_call_button_label2=Prêt à démarrer votre conversation ?
 incoming_call_title2=Demande de conversation
 incoming_call_accept_button=Accepter
 incoming_call_accept_audio_only_tooltip=Accepter en mode audio
+incoming_call_accept_audio_video_tooltip=Accepter en mode vidéo
 incoming_call_cancel_button=Annuler
 incoming_call_cancel_and_block_button=Annuler et bloquer
 incoming_call_block_button=Bloquer
