[browser] Bug 1064130 - Improve handling of a11y labels for autocomplete results

--- a/fr/browser/chrome/browser/places/places.properties
+++ b/fr/browser/chrome/browser/places/places.properties
@@ -86,6 +86,12 @@ tagResultLabel=Étiquette
 # See createResultLabel() in urlbarBindings.xml
 bookmarkResultLabel=Marque-page
 
+# LOCALIZATION NOTE (switchtabResultLabel) :
+# Noun used to describe the location bar autocomplete result type
+# to users with screen readers
+# See createResultLabel() in urlbarBindings.xml
+switchtabResultLabel=Onglet
+
 # LOCALIZATION NOTE (lockPrompt.text)
 # %S will be replaced with the application name.
 lockPrompt.title=Erreur au démarrage du navigateur
