mobile update 2 for aurora 34

--- a/fy-NL/mobile/android/chrome/browser.properties
+++ b/fy-NL/mobile/android/chrome/browser.properties
@@ -7,8 +7,12 @@ addonsConfirmInstall.install=Ynstallearje
 
 # Alerts
 alertAddonsDownloading=Add-on ynlade
-alertAddonsInstalledNoRestart=Ynstallaasje dien
 alertAddonsFail=Ynstallaasje mislearre
+alertAddonsInstalledNoRestart.message=Ynstallaasje dien
+
+# LOCALIZATION NOTE (alertAddonsInstalledNoRestart.action2): Ideally, this string is short (it's a
+# button label) and upper-case, to match Google and Android's convention.
+alertAddonsInstalledNoRestart.action2=ADD-ONS
 
 alertDownloadsStart2=Downloaden starte
 alertDownloadsDone2=Downloaden foltôge
@@ -19,6 +23,9 @@ alertDownloadsToast=Downloaden start…
 alertDownloadsPause=Pausearje
 alertDownloadsResume=Trochgean
 alertDownloadsCancel=Annulearje
+# LOCALIZATION NOTE (undoCloseToast.message): This message appears in a toast
+# when the user tries to download something in Guest mode.
+downloads.disabledInGuest=Downloads binne útskeakele yn gastsesjes
 
 alertFullScreenToast=Druk op TEBEK om folsleinskermmoadus te ferlitten
 
@@ -87,12 +94,12 @@ identity.encrypted2=Fersifere
 identity.ownerUnknown3=net bekend
 
 # Geolocation UI
-geolocation.allow=Trochjaan
-geolocation.dontAllow=Net trochjaan
+geolocation.allow=Diele
+geolocation.dontAllow=Net diele
 geolocation.ask=Jo lokaasje diele mei %S?
 # LOCALIZATION NOTE (geolocation.shareLocation): Label that will be used in
 # site settings dialog.
-geolocation.shareLocation=Lokaasje trochjaan
+geolocation.shareLocation=Lokaasje diele
 # LOCALIZATION NOTE (geolocation.dontAskAgain): This label appears next to a
 # checkbox to indicate whether or not the user wants to make a permanent decision.
 geolocation.dontAskAgain=My net opnij freegje foar dizze website
@@ -115,6 +122,35 @@ contacts.ask=%S tagong ta jo kontakten tastean?
 # LOCALIZATION NOTE (contacts.dontAskAgain): This label appears next to a
 # checkbox to indicate whether or not the user wants to make a permanent decision.
 contacts.dontAskAgain=Net mear freegje foar dizze website
+
+# Device Storage API
+deviceStorageMusic.allow=Tastean
+deviceStorageMusic.dontAllow=Net tastean
+deviceStorageMusic.ask=%S tagong ta jo muzyk tastean?
+# LOCALIZATION NOTE (deviceStorageMusic.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageMusic.dontAskAgain=Don't ask again for this site
+
+deviceStoragePictures.allow=Tastean
+deviceStoragePictures.dontAllow=Net tastean
+deviceStoragePictures.ask=%S tagong ta jo ôfbyldingen tastean?
+# LOCALIZATION NOTE (deviceStoragePictures.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStoragePictures.dontAskAgain=Don't ask again for this site
+
+deviceStorageSdcard.allow=Tastean
+deviceStorageSdcard.dontAllow=Net tastean
+deviceStorageSdcard.ask=%S tagong ta jo eksterne ûnthâld tastean?
+# LOCALIZATION NOTE (deviceStorageSdcard.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageSdcard.dontAskAgain=Don't ask again for this site
+
+deviceStorageVideos.allow=Tastean
+deviceStorageVideos.dontAllow=Net tastean
+deviceStorageVideos.ask=%S tagong ta jo fideo's tastean?
+# LOCALIZATION NOTE (deviceStorageVideos.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageVideos.dontAskAgain=Net mear freegje foar dizze website
 
 # New Tab Popup
 # LOCALIZATION NOTE (newtabpopup, newprivatetabpopup): Semicolon-separated list of plural forms.
@@ -175,7 +211,11 @@ browser.menu.showCharacterEncoding=false
 selectionHelper.textCopied=Tekst kopiearre nei klamboerd
 
 # Casting
-casting.prompt=Caste nei apparaat
+# LOCALIZATION NOTE (casting.sendToDevice): Label that will be used in the
+# dialog/prompt.
+casting.sendToDevice=Ferstjoer nei apparaat
+casting.mirrorTab=Ljepblêd spegelje
+casting.mirrorTabStop=Stop spegeljen
 
 # Context menu
 contextmenu.openInNewTab=Keppeling iepenje yn nij ljepblad
@@ -209,8 +249,10 @@ contextmenu.unmute=Dempe útskeakelje
 contextmenu.saveVideo=Fideo bewarje 
 contextmenu.saveAudio=Audio bewarje
 contextmenu.addToContacts=Tafoegje oan kontakten
-contextmenu.castToScreen=Casten nei skerm
-  
+# LOCALIZATION NOTE (contextmenu.sendToDevice):
+# The label that will be used in the contextmenu and the pageaction
+contextmenu.sendToDevice=Ferstjoer nei apparaat
+
 contextmenu.copy=Kopiearje
 contextmenu.cut=Knippe
 contextmenu.selectAll=Alles selektearje
@@ -341,3 +383,9 @@ browser.menu.context.mailto = E-mail
 # "Subscribe to page" prompts created in FeedHandler.js
 feedHandler.chooseFeed=Kies feed
 feedHandler.subscribeWith=Abonnearje mei
+
+# LOCALIZATION NOTE (nativeWindow.deprecated):
+# This string is shown in the console when someone uses deprecated NativeWindow apis.
+# %1$S=name of the api that's deprecated, %2$S=New API to use. This may be a url to
+# a file they should import or the name of an api.
+nativeWindow.deprecated=%S is net stipe. Brûk yn stee dêrfan %S
