--- a/fy-NL/mobile/android/chrome/webapp.properties
+++ b/fy-NL/mobile/android/chrome/webapp.properties
@@ -55,3 +55,5 @@ retrievalFailedTitle=#1 download mislearre;#1 downloads mislearre
 # %1$S is a comma-separated list of apps for which retrieval failed.
 # example: Failed to retrieve updates for Foo, Bar, Baz
 retrievalFailedMessage=Opheljen fan fernijing foar %1$S mislearre;Opheljen fan fernijinge foar %1$S mislearre
+
+webappsDisabledInGuest=It ynstallearjen fan apps is útskeakele yn gastsesjes
