[dom] Bug 1047428 - [AccessFu] Report read only state for editables

--- a/fr/dom/chrome/accessibility/AccessFu.properties
+++ b/fr/dom/chrome/accessibility/AccessFu.properties
@@ -157,6 +157,7 @@ statePressed     =    pressé
 stateExpanded    =    développé
 stateCollapsed   =    réduit
 stateUnavailable =    indisponible
+stateReadonly    =    lecture seule
 stateRequired    =    requis
 stateTraversed   =    visité
 stateHasPopup    =    possède un popup
