--- a/fr/dom/chrome/security/security.properties
+++ b/fr/dom/chrome/security/security.properties
@@ -16,3 +16,5 @@ InsecureFormActionPasswordsPresent=Champs mot de passe présents dans un formula
 InsecurePasswordsPresentOnIframe=Champs mot de passe présents dans une iframe non sécurisée (http://). Cela représente un risque de sécurité permettant le vol d'identifiants de connexion.
 LoadingMixedActiveContent=Chargement de contenu mixte actif (non sécurisé) sur une page sécurisée « %1$S »
 LoadingMixedDisplayContent=Chargement de contenu mixte non actif (non sécurisé) sur une page sécurisée « %1$S »
+# LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
+BothAllowScriptsAndSameOriginPresent=Un iframe possédant à la fois allow-scripts et allow-same-origin pour son attribut sandbox peut se retirer du mode bac à sable (sandboxing).
