Bug 1065497 - Firefox Mobile 34: fixes. r=me

--- a/de/mobile/android/chrome/browser.properties
+++ b/de/mobile/android/chrome/browser.properties
@@ -8,7 +8,7 @@ addonsConfirmInstall.install=Installieren
 # Alerts
 alertAddonsDownloading=Add-on wird heruntergeladen
 alertAddonsFail=Installation fehlgeschlagen
-alertAddonsInstalledNoRestart.message=Installation abgeschlossen
+alertAddonsInstalledNoRestart.message=Fertig
 
 # LOCALIZATION NOTE (alertAddonsInstalledNoRestart.action2): Ideally, this string is short (it's a
 # button label) and upper-case, to match Google and Android's convention.
