[S] devtools: Bug 1064282 - Scratchpad should have statusbar like Page Source viewer

--- a/it/browser/chrome/browser/devtools/scratchpad.properties
+++ b/it/browser/chrome/browser/devtools/scratchpad.properties
@@ -18,6 +18,7 @@ scratchpadIntro1 = /*\n * Questo è un blocco per gli appunti JavaScript.\n *\n 
 scratchpad.noargs = Blocco per gli appunti è stato creato senza argomenti.
 browserContext.notification = Questo blocco per gli appunti è in esecuzione nel contesto del browser.
 help.openDocumentationPage = https://developer.mozilla.org/en/Tools/Scratchpad
+scratchpad.statusBarLineCol = Riga %1$S, col. %2$S
 fileNoLongerExists.notification = Il file non è più disponibile.
 propertiesFilterPlaceholder = Filtra proprietà
 connectionTimeout = Tempo per la connessione esaurito. Controllare la Console errori da entrambi i lati per eventuali messaggi di errore. Riaprire il Blocco per gli appunti per riprovare.
