Bug 1042060 - Implement default answering mode for desktop client

--- a/pl/browser/chrome/browser/loop/loop.properties
+++ b/pl/browser/chrome/browser/loop/loop.properties
@@ -67,6 +67,7 @@ initiate_call_button_label2=Rozpocząć rozmowę?
 incoming_call_title2=Rozmowa przychodząca
 incoming_call_accept_button=Odbierz
 incoming_call_accept_audio_only_tooltip=Odbierz (tylko dźwięk)
+incoming_call_accept_audio_video_tooltip=Odbierz (z obrazem)
 incoming_call_cancel_button=Odrzuć
 incoming_call_cancel_and_block_button=Odrzuć i zablokuj
 incoming_call_block_button=Zablokuj
