Bug 1064282 - Scratchpad should have statusbar like Page Source viewer

--- a/pl/browser/chrome/browser/devtools/scratchpad.properties
+++ b/pl/browser/chrome/browser/devtools/scratchpad.properties
@@ -70,6 +70,8 @@ browserContext.notification=Ten brudnopis wykonuje kod w kontekście przeglądar
 # FIXME (Aviary.pl): zmienić na polską wersję, kiedy/jeśli będzie.
 help.openDocumentationPage=https://developer.mozilla.org/en/Tools/Scratchpad
 
+scratchpad.statusBarLineCol=Wiersz %1$S, kolumna %2$S
+
 # LOCALIZATION NOTE (fileExists.notification): This is the message displayed
 # over the top of the the editor when a file does not exist.
 fileNoLongerExists.notification=Ten plik już nie istnieje.
