files modified in Aurora

--- a/uk/browser/chrome/browser/preferences/preferences.properties
+++ b/uk/browser/chrome/browser/preferences/preferences.properties
@@ -94,6 +94,7 @@ cookiesAll=На вашому комп’ютері зберігаються на
 cookiesFiltered=Рядку пошуку відповідають наступні куки:
 
 #### Offline apps
+offlineAppsList.height=7em
 offlineAppRemoveTitle=Вилучити офлайнові дані сайтів
 offlineAppRemovePrompt=Після вилучення цих даних %S не буде доступний в офлайновому режимі.  Чи певні ви в тому що хочете вилучити цей офлайновий сайт?
 offlineAppRemoveConfirm=Вилучити офлайнові дані
