--- a/uk/browser/chrome/browser/quitDialog.properties
+++ b/uk/browser/chrome/browser/quitDialog.properties
@@ -10,3 +10,4 @@ saveTitle=&Зберегти та Вийти
 neverAsk2=&Не питати наступного разу
 message=Чи хочете ви, щоб %S зберігав ваші вкладки та вікна для наступного його запуску?
 messageNoWindows=Чи хочете ви, щоб %S зберігав ваші вкладки для наступного його запуску?
+messagePrivate=You're in private browsing mode. Quitting %S now will discard all your open tabs and windows.
