--- a/uk/browser/chrome/browser/shellservice.properties
+++ b/uk/browser/chrome/browser/shellservice.properties
@@ -4,10 +4,20 @@
 
 optionsLabel=%S &Настройки
 safeModeLabel=%S &Безпечний режим
-setDefaultBrowserTitle=Типовий браузер
-setDefaultBrowserMessage=%S не є типовим браузером системи. Зробити його таким?
-setDefaultBrowserDontAsk=Завжди виконувати цю перевірку при запуску %S.
-alreadyDefaultBrowser=%S вже є типовим браузером системи.
+
+# LOCALIZATION NOTE (setDefaultBrowserMessage2, setDefaultBrowserConfirm.label):
+# %S will be replaced by brandShortName
+setDefaultBrowserMessage2          = Get the most out of %S by setting it as your default browser
+setDefaultBrowserConfirm.label     = Use %S as my default browser
+setDefaultBrowserConfirm.accesskey = U
+setDefaultBrowserOptions.label     = Options
+setDefaultBrowserOptions.accesskey = O
+setDefaultBrowserNotNow.label      = Not now
+setDefaultBrowserNotNow.accesskey  = N
+setDefaultBrowserNever.label       = Don't ask me again
+setDefaultBrowserNever.accesskey   = D
+
+
 desktopBackgroundLeafNameWin=Desktop Background.bmp
 DesktopBackgroundDownloading=Зберігається зображення…
 DesktopBackgroundSet=Встановити як тло робочого стола
