--- a/uk/browser/chrome/browser/devtools/debugger.properties
+++ b/uk/browser/chrome/browser/devtools/debugger.properties
@@ -15,6 +15,10 @@
 # displayed inside the developer tools window and in the Developer Tools Menu.
 ToolboxDebugger.label=Зневаджувач
 
+# LOCALIZATION NOTE (ToolboxDebugger.panelLabel):
+# This is used as the label for the toolbox panel.
+ToolboxDebugger.panelLabel=Debugger Panel
+
 # LOCALIZATION NOTE (DebuggerWindowTitle):
 # The title displayed for the debugger window.
 DebuggerWindowTitle=Зневаджувач браузера
