--- a/uk/toolkit/chrome/global/aboutSupport.properties
+++ b/uk/toolkit/chrome/global/aboutSupport.properties
@@ -64,6 +64,7 @@ clearTypeParametersNotFound = Параметри ClearType не знайдені
 adapterDescription = Опис відеоплати
 adapterVendorID = Код виробника
 adapterDeviceID = Код пристрою
+adapterSubsysID = Subsys ID
 adapterDrivers = Драйвери відеоплати
 adapterRAM = Пам’ять відеоплати
 driverVersion = Версія драйвера
@@ -71,6 +72,7 @@ driverDate = Дата драйвера
 adapterDescription2 = Опис відеоплати (GPU #2) 
 adapterVendorID2 = Код виробника (GPU #2) 
 adapterDeviceID2 = Код пристрою (GPU #2)
+adapterSubsysID2 = Subsys ID (GPU #2)
 adapterDrivers2 = Драйвери відеоплати (GPU #2)
 adapterRAM2 = Пам’ять відеоплати (GPU #2)
 driverVersion2 = Версія драйвера (GPU #2)
