--- a/uk/webapprt/webapprt/webapp.properties
+++ b/uk/webapprt/webapprt/webapp.properties
@@ -40,6 +40,14 @@ webapps.install.title=Встановити %S
 webapps.install.description=Ви хочете встановити %S?
 webapps.install.install=Встановити програму
 webapps.install.dontinstall=Не встановлювати
+# LOCALIZATION NOTE (webapps.uninstall.title): %S will be replaced with the name
+# of the webapp being uninstalled.
+webapps.uninstall.title=Uninstall %S
+# LOCALIZATION NOTE (webapps.uninstall.description): %S will be replaced with the
+# name of the webapp being uninstalled.
+webapps.uninstall.description=Do you want to uninstall %S?
+webapps.uninstall.uninstall=Uninstall App
+webapps.uninstall.dontuninstall=Don't Uninstall
 
 paymentDialog.title=Платежі
 paymentDialog.message=Якого провайдера оплат ви б хотіли використовувати?
