--- a/cy/browser/chrome/browser/loop/loop.properties
+++ b/cy/browser/chrome/browser/loop/loop.properties
@@ -239,7 +239,7 @@ connection_error_see_console_notification=Methodd yr alwad; gwelwch y consol am 
 ## parts between {{..}} because these will be replaced with links with the labels
 ## from legal_text_tos and legal_text_privacy. clientShortname will be replaced
 ## by the brand name, or fall back to client_shortname_fallback
-legal_text_and_links3=Drwy ddefnyddio {{clientShortname}} rydych yn cytuno i {{terms_of_use}} a {{privacy_notice}}.
+legal_text_and_links3=Drwy ddefnyddio {{clientShortname}} rydych yn cytuno i'r {{terms_of_use}} a'r {{privacy_notice}}.
 legal_text_tos = Amodau Defnydd
 legal_text_privacy = Rhybudd Preifatrwydd
 client_shortname_fallback=y cynnyrch
