[es-MX] update from Pootle (firefox)

--- a/es-MX/browser/chrome/browser/loop/loop.properties
+++ b/es-MX/browser/chrome/browser/loop/loop.properties
@@ -25,6 +25,7 @@ share_link_header_text=Compartir este enlace para invitar a alguien a hablar:
 ## In this item, don't translate the part between {{..}}
 
 # Status text
+display_name_guest=Invitado
 display_name_dnd_status=No molestar
 display_name_available_status=Disponible
 
@@ -33,6 +34,15 @@ display_name_available_status=Disponible
 ## These may be displayed at the top of the panel here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
 unable_retrieve_url=Lo siento, no nos es posible recuperar una llamada de url.
+session_expired_error_description=La sesión ha expirado. Todas las URL que has creado y compartido anteriormente ya no funcionan.
+could_not_authenticate=No se puede autenticar
+password_changed_question=¿Cambiaste tu contraseña?
+try_again_later=Por favor, intenta de nuevo más tarde
+could_not_connect=No se puede conectar al servidor
+check_internet_connection=Por favor, revisa tu conexión a Internet
+login_expired=Tu sesión ha expirado
+service_not_available=El servicio no está disponible en este momento
+problem_accessing_account=Hubo un problema accesando a tu cuenta
 
 ## LOCALIZATION NOTE(retry_button): Displayed when there is an error to retry
 ## the appropriate action.
@@ -55,34 +65,44 @@ contacts_search_placesholder=Buscar…
 ## new contact sub-panel.
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
 ## for where this appears on the UI
+new_contact_button=Nuevo contacto
 ## LOCALIZATION NOTE (new_contact_name_placeholder, new_contact_email_placeholder):
 ## These are the placeholders for the fields for entering a new contact
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
 ## and click the 'New Contact' button to see the fields.
+new_contact_name_placeholder=Nombre
+new_contact_email_placeholder=Correo electrónico
 ## LOCALIZATION NOTE (add_contact_button):
 ## This is the button to actually add the new contact
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
 ## and click the 'New Contact' button to see the fields.
+add_contact_button=Agregar contacto
 ### LOCALIZATION NOTE (valid_email_text_description): This is displayed when
 ### the user enters an invalid email address, preventing the addition of the
 ### contact.
+valid_email_text_description=Por favor, ingresa una dirección de correo electrónico válida
 
 ## LOCALIZATION NOTE (add_or_import_contact_title): This is the subtitle of the panel
 ## at https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+add_or_import_contact_title=Agregar o importar contacto
 ## LOCALIZATION NOTE (import_contacts_button, importing_contacts_progress_button):
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
 ## for where these appear on the UI
+import_contacts_button=Importar
 importing_contacts_progress_button=Importando…
 ## LOCALIZATION NOTE(sync_contacts_button): This button is displayed in place of
 ## importing_contacts_button once contacts have been imported once.
+sync_contacts_button=Sincronizar contactos
 ## LOCALIZATION NOTE(import_failed_description simple): Displayed when an import of
 ## contacts fails. This is displayed in the error field here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
+import_failed_description_simple=Lo siento, no se puede importar contacto
 ## LOCALIZATION NOTE(import_failed_description): Displayed when an import of contacts
 ## fails and the user may need more help. In this item, don't translate the part between
 ## {{..}} because this will be replaced by the label from import_failed_support_link_label.
 ## This is displayed in the error field here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
+import_failed_description=Lo siento, no se puede importar contacto, por favor mira nuestra {{import_failed_support_link_label}} para ayuda
 
 ## LOCALIZATION NOTE(remove_contact_menu_button): Displayed in the contact list in
 ## a pop-up menu next to the contact's name.
@@ -108,21 +128,31 @@ importing_contacts_progress_button=Importando…
 ## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
 ## These fields are display when the Edit Contact button is selected.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+edit_contact_email_label=Correo electrónico
 ## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
 ## These button is displayed when the Edit Contact button is selected and is used
 ## to accept the change.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+edit_contact_done_button=Hecho
 
 ## LOCALIZATION NOTE(audio_call_menu_button): Displayed in the contact list in a
 ## pop-up menu next to the contact's name.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+audio_call_menu_button=Conversación de audio
 
 ## LOCALIZATION NOTE(video_call_menu_button): Displayed in the contact list in a
 ## pop-up menu next to the contact's name.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+video_call_menu_button=Conversación de video
 
 # Conversation Window Strings
 
+initiate_call_button_label2=¿Estás listo para iniciar tu conversación?
+incoming_call_title2=Solicitud de conversación
+incoming_call_accept_button=Aceptar
+incoming_call_accept_audio_only_tooltip=Aceptar con voz
+incoming_call_cancel_button=Cancelar
+incoming_call_cancel_and_block_button=Cancelar y bloquear
 incoming_call_block_button=Bloquear
 hangup_button_caption2=Salir
 mute_local_audio_button_title=Detener tu audio
@@ -146,19 +176,27 @@ initiate_audio_video_call_button2=Empezar
 ## when the other client is actually ringing.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
 
+restart_call=Volver a unirse
 
+generic_failure_title=Algo salió mal.
+generic_failure_with_reason2=Puedes volver a intentarlo o enviar un enlace para ser localizado más tarde.
+generic_failure_no_reason2=¿Te gustaría intentarlo de nuevo?
 
 ## LOCALIZATION NOTE (contact_offline_title): Title for
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
 ## displayed when the contact is offline.
+contact_offline_title=Esta persona no está conectada
 ## LOCALIZATION NOTE (call_timeout_notification_text): Title for
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
 ## displayed when the call didn't go through.
+call_timeout_notification_text=Tu llamada no obtuvo respuesta.
 
 ## LOCALIZATION NOTE (retry_call_button, cancel_button, email_link_button):
 ## These buttons are displayed when a call has failed:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
+retry_call_button=Internar de nuevo
 email_link_button=Enviar enlace
+cancel_button=Cancelar
 
 cannot_start_call_session_not_ready=No se puede iniciar la llamada, la sesión no está lista.
 network_disconnected=La conexión de red ha terminado abruptamente.
@@ -168,15 +206,21 @@ connection_error_see_console_notification=La llamada falló; ve la consola para 
 ## parts between {{..}} because these will be replaced with links with the labels
 ## from legal_text_tos and legal_text_privacy. clientShortname will be replaced
 ## by the brand name, or fall back to client_shortname_fallback
-  and {{privacy_notice}}.
+legal_text_and_links3=Al usar {{clientShortname}} aceptas los {{terms_of_use}} \\ y el {{privacy_notice}}.
+legal_text_tos = Términos de uso
 legal_text_privacy = Política de privacidad
 
+feedback_submit_button=Enviar
+feedback_back_button=Atrás
 ## LOCALIZATION NOTE (feedback_window_will_close_in2):
 ## Semicolon-separated list of plural forms. See:
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
 ## In this item, don't translate the part between {{..}}
+feedback_window_will_close_in2=Esta ventana se cerrará en {{countdown}} segundo;Esta ventana se cerrará en {{countdown}} segundos
 ## LOCALIZATION_NOTE (feedback_rejoin_button): Displayed on the feedback form after
 ## a signed-in to signed-in user call.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#feedback
+feedback_rejoin_button=Volver a unirse
 ## LOCALIZATION NOTE (feedback_report_user_button): Used to report a user in the case of
 ## an abusive user.
+feedback_report_user_button=Reportar usuario
