--- a/es-MX/browser/chrome/browser/quitDialog.properties
+++ b/es-MX/browser/chrome/browser/quitDialog.properties
@@ -10,3 +10,4 @@ saveTitle=&Guardar y cerrar
 neverAsk2=&No preguntar la próxima vez
 message=¿Quieres que %S guarde las pestañas y ventanas abiertas para abrirlas en la próxima ejecución?
 messageNoWindows=¿Quieres que %S guarde las pestañas abiertas para la próxima ejecución?
+messagePrivate=Estás en modo de navegación privada. Salir de %S descartará todas tus ventanas y pestañas abiertas.
