--- a/es-MX/dom/chrome/accessibility/AccessFu.properties
+++ b/es-MX/dom/chrome/accessibility/AccessFu.properties
@@ -9,6 +9,7 @@ screenReaderStopped = Lector de pantalla detenido
 # Roles
 menubar        =       barra de menús
 scrollbar      =       barra de desplazamiento
+grip           =       asa
 alert          =       alerta
 menupopup      =       menú emergente
 document       =       documento
@@ -29,10 +30,31 @@ listitem       =       elemento de lista
 outline        =       contorno
 outlineitem    =       elemento de contorno
 pagetab        =       pestaña
+propertypage   =       página de propiedades
+graphic        =       gráfico
 pushbutton     =       botón
+checkbutton    =       casilla seleccionable
+radiobutton    =       botón de radio
+combobox       =       caja deplegable
+progressbar    =       barra de progreso
+slider         =       deslizador
+spinbutton     =       botón de incremento/decremento
+diagram        =       diagrama
 passwordtext   =       texto de contraseña
+radiomenuitem  =       elemento de menú de radio
+textcontainer  =       contenedor de texto
+togglebutton   =       botón de alternancia
+treetable      =       tabla de árbol
+header         =       encabezado
+footer         =       pie de página
+paragraph      =       párrafo
+entry          =       entrada
+caption        =       leyenda
+heading        =       encabezado
 imagemap       =       mapa de imágenes
 figure         =       figura
+term           =       término
+definition     =       definición
 
 # More sophisticated roles which are not actual numeric roles
 textarea       =       área de texto
@@ -57,6 +79,7 @@ listItemsCount =       1 elemento;#1 elementos
 # LOCALIZATION NOTE: # %1$S is the position of the item n the set.
 # %2$S is the total number of such items in the set.
 # An expanded example would read "2 of 5".
+objItemOfN      =       %1$S de %2$S
 
 # Landmark announcements
 banner         =       banner
@@ -69,9 +92,11 @@ search         =       buscar
 # LOCALIZATION NOTE (tblColumnInfo): Semi-colon list of plural forms.
 # Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+tblColumnInfo = con 1 columna;con #1 columnas
 # LOCALIZATION NOTE (tblRowInfo): Semi-colon list of plural forms.
 # Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+tblRowInfo = y 1 fila; y #1 filas
 
 # table or grid cell information
 columnInfo = Columna %S
@@ -143,12 +168,42 @@ quicknav_Table       = Tablas
 quicknav_Checkbox    = Casillas de selección
 
 # Shortened role names for braille
+menubarAbbr        =       barra de menú
+scrollbarAbbr      =       barra de desplazamiento
+gripAbbr           =       asa
+alertAbbr          =       alerta
+menupopupAbbr      =       menú emergente
 tableAbbr          =       tbl
+cellAbbr           =       celda
 linkAbbr           =       lnk
+listAbbr           =       lista
+listitemAbbr       =       elemento de la lista
+outlineAbbr        =       contorno
+outlineitemAbbr    =       elemento de contorno
+pagetabAbbr        =       pestaña
+propertypageAbbr   =       página de propiedades
+graphicAbbr        =       gráfico
 pushbuttonAbbr     =       btn
+checkbuttonAbbr    =       casilla seleccionable
+radiobuttonAbbr    =       botón de radio
+canvasAbbr         =       canvas
+checkmenuitemAbbr  =       elemento del menú seleccionable
+labelAbbr          =       etiqueta
 passwordtextAbbr   =       passwdtxt
+radiomenuitemAbbr  =       elemento de menú de radio
+textcontainerAbbr  =       contenedor de texto
+togglebuttonAbbr   =       botón de alternancia
+treetableAbbr      =       tabla de árbol
+headerAbbr         =       encabezado
+footerAbbr         =       pie de página
+paragraphAbbr      =       párrafo
 imagemapAbbr       =       imgmap
+gridcellAbbr       =       cuadrícula
+noteAbbr           =       nota
 figureAbbr         =       fig
+definitionlistAbbr =       lista de definiciones
+termAbbr           =       término
+definitionAbbr     =       definición
 textareaAbbr       =       areatxt
 
 # LOCALIZATION NOTE (tblColumnInfoAbbr): Semi-colon list of plural forms.
@@ -161,3 +216,7 @@ tblColumnInfoAbbr = #1c;#1c
 tblRowInfoAbbr = #1r;#1r
 cellInfoAbbr = c%Sr%S
 
+stateCheckedAbbr = (x)
+stateUncheckedAbbr = ( )
+statePressedAbbr = (x)
+stateUnpressedAbbr = ( )
