--- a/es-MX/dom/chrome/dom/dom.properties
+++ b/es-MX/dom/chrome/dom/dom.properties
@@ -208,3 +208,4 @@ KeyNameZoomWarning=El valor "Zoom" de KeyboardEvent.key es obsoleto y será reno
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key" and "Dead".
 KeyNameDeadKeysWarning=Los valores de KeyboardEvent.key que comienzan con "Dead" es obsoleto y será convertido a simplemente "Dead". Para más ayuda mira https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 ImportXULIntoContentWarning=Importar nodos XUL en un documento de contenido está desaprobado. Esta funcionalidad puede desaparecer pronto.
+XMLDocumentLoadPrincipalMismatch=El uso de document.load está prohibido en documentos que vienen de otras ventanas. Sólo la ventana en la que se ha creado un documento puede llamar a .load en ese documento. Es preferible usar XMLHttpRequest en su lugar.
