--- a/es-MX/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/es-MX/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,3 +97,5 @@ quit-button.tooltiptext.linux2 = Salir de %1$S (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Salir de %1$S (%2$S)
 
+loop-call-button.label = Invita a alguien para platicar
+loop-call-button.tooltiptext = Invita a alguien para platicar
