--- a/es-MX/browser/chrome/browser/devtools/profiler.properties
+++ b/es-MX/browser/chrome/browser/devtools/profiler.properties
@@ -13,13 +13,16 @@
 # LOCALIZATION NOTE (profiler.label):
 # This string is displayed in the title of the tab when the profiler is
 # displayed inside the developer tools window and in the Developer Tools Menu.
+profiler.label2=Rendimiento
 
 # LOCALIZATION NOTE (profiler.panelLabel):
 # This is used as the label for the toolbox panel.
+profiler.panelLabel2=Panel de rendimiento
 
 # LOCALIZATION NOTE (profiler2.commandkey, profiler.accesskey)
 # Used for the menuitem in the tool menu
 profiler.commandkey2=VK_F5
+profiler.accesskey=P
 
 # LOCALIZATION NOTE (profiler.tooltip2):
 # This string is displayed in the tooltip of the tab when the profiler is
@@ -33,10 +36,12 @@ noRecordingsText=No existen perfiles todavía.
 # LOCALIZATION NOTE (recordingsList.itemLabel):
 # This string is displayed in the recordings list of the Profiler,
 # identifying a set of function calls.
+recordingsList.itemLabel=Grabando #%S
 
 # LOCALIZATION NOTE (recordingsList.recordingLabel):
 # This string is displayed in the recordings list of the Profiler,
 # for an item that has not finished recording.
+recordingsList.recordingLabel=En proceso…
 
 # LOCALIZATION NOTE (recordingsList.durationLabel):
 # This string is displayed in the recordings list of the Profiler,
@@ -51,33 +56,44 @@ recordingsList.saveLabel=Guardar
 # LOCALIZATION NOTE (profile.tab):
 # This string is displayed in the profile view for a tab, after the
 # recording has finished, as the recording 'start → stop' range in milliseconds.
+profile.tab=%1$S ms →%2$S ms
 
 # LOCALIZATION NOTE (graphs.fps):
 # This string is displayed in the framerate graph of the Profiler,
 # as the unit used to measure frames per second. This label should be kept
 # AS SHORT AS POSSIBLE so it doesn't obstruct important parts of the graph.
+graphs.fps=fps
 
 # LOCALIZATION NOTE (category.*):
 # These strings are displayed in the categories graph of the Profiler,
 # as the legend for each block in every bar. These labels should be kept
 # AS SHORT AS POSSIBLE so they don't obstruct important parts of the graph.
+category.other=Gecko
+category.css=Estilos
+category.js=JIT
+category.gc=GC
 category.network=Red
 category.graphics=Gráficas
 category.storage=Almacenamiento
+category.events=Entrada & Eventos
 
 # LOCALIZATION NOTE (table.root):
 # This string is displayed in the call tree for the root node.
+table.root=(raíz)
 
 # LOCALIZATION NOTE (table.url.tooltiptext):
 # This string is displayed in the call tree as the tooltip text for the url
 # labels which, when clicked, jump to the debugger.
+table.url.tooltiptext=Ver fuente en un depurador
 
 # LOCALIZATION NOTE (table.zoom.tooltiptext):
 # This string is displayed in the call tree as the tooltip text for the 'zoom'
 # buttons (small magnifying glass icons) which spawn a new tab.
+table.zoom.tooltiptext=Inspeccionar marco en una pestaña nueva
 
 # LOCALIZATION NOTE (recordingsList.saveDialogTitle):
 # This string is displayed as a title for saving a recording to disk.
+recordingsList.saveDialogTitle=Guardar perfil…
 
 # LOCALIZATION NOTE (recordingsList.saveDialogJSONFilter):
 # This string is displayed as a filter for saving a recording to disk.
