--- a/es-MX/browser/chrome/browser/devtools/projecteditor.properties
+++ b/es-MX/browser/chrome/browser/devtools/projecteditor.properties
@@ -19,6 +19,7 @@ projecteditor.confirmUnsavedTitle=Cambios sin guardar
 # LOCALIZATION NOTE (projecteditor.confirmUnsavedLabel):
 # This string is displayed as the message of the confirm prompt that checks
 # to make sure if the project editor can be closed without saving changes
+projecteditor.confirmUnsavedLabel=Tienes cambios sin guardar que se perderán si sales. ¿Estás seguro que deseas continuar?
 
 # LOCALIZATION NOTE (projecteditor.deleteLabel):
 # This string is displayed as a context menu item for allowing the selected
