--- a/es-MX/browser/chrome/browser/devtools/storage.properties
+++ b/es-MX/browser/chrome/browser/devtools/storage.properties
@@ -11,37 +11,48 @@
 
 # LOCALIZATION NOTE  (storage.commandkey): This the key to use in
 # conjunction with shift to open the storage editor
+storage.commandkey=VK_F9
 
 # LOCALIZATION NOTE (storage.accesskey): The access key used to open the storage
 # editor.
+storage.accesskey=a
 
 # LOCALIZATION NOTE (storage.label):
 # This string is displayed as the label of the tab in the developer tools window
+storage.label=Almacenamiento
 
 # LOCALIZATION NOTE (storage.menuLabel):
 # This string is displayed in the Tools menu as a shortcut to open the devtools
 # with the Storage Inspector tab selected.
+storage.menuLabel=Inspector de almacenamiento
 
 # LOCALIZATION NOTE (storage.panelLabel):
 # This string is used as the aria-label for the iframe of the Storage Inspector
 # tool in developer tools toolbox.
+storage.panelLabel=Panel de almacenamiento
 
 # LOCALIZATION NOTE (storage.tooltip):
 # This string is displayed in the tooltip of the tab when the storage editor is
 # displayed inside the developer tools window.
+storage.tooltip2=Inspector de almacenamiento (cookies, almacenamiento local …)
 
 # LOCALIZATION NOTE (tree.emptyText):
 # This string is displayed when the Storage Tree is empty. This can happen when
 # there are no websites on the current page (about:blank)
+tree.emptyText=No hay servidores en la página
 
 # LOCALIZATION NOTE (table.emptyText):
 # This string is displayed when there are no rows in the Storage Table for the
 # selected host.
+table.emptyText=No hay datos para el servidor seleccionado
 
 # LOCALIZATION NOTE (tree.labels.*):
 # These strings are the labels for Storage type groups present in the Storage
 # Tree, like cookies, local storage etc.
 tree.labels.cookies=Cookies
+tree.labels.localStorage=Almacenamiento local
+tree.labels.sessionStorage=Almacenamiento de sesión
+tree.labels.indexedDB=DB indexada
 
 # LOCALIZATION NOTE (table.headers.*.*):
 # These strings are the header names of the columns in the Storage Table for
@@ -49,26 +60,47 @@ tree.labels.cookies=Cookies
 table.headers.cookies.name=Nombre
 table.headers.cookies.path=Ruta
 table.headers.cookies.host=Dominio
+table.headers.cookies.expires=Expira el
+table.headers.cookies.value=Valor
+table.headers.cookies.lastAccessed=Último acceso el
+table.headers.cookies.creationTime=Creado el
 # LOCALIZATION NOTE (table.headers.cookies.isHttpOnly):
 # This string is used in the header for the column which denotes whether a
 # cookie is HTTP only or not.
+table.headers.cookies.isHttpOnly=isHttpOnly
 # LOCALIZATION NOTE (table.headers.cookies.isSecure):
 # This string is used in the header for the column which denotes whether a
 # cookie can be accessed via a secure channel only or not.
+table.headers.cookies.isSecure=isSecure
 # LOCALIZATION NOTE (table.headers.cookies.isDomain):
 # This string is used in the header for the column which denotes whether a
 # cookie is a domain cookie only or not.
+table.headers.cookies.isDomain=isDomain
 
+table.headers.localStorage.name=Clave
+table.headers.localStorage.value=Valor
 
+table.headers.sessionStorage.name=Clave
 
+table.headers.indexedDB.name=Clave
+table.headers.indexedDB.db=Nombre de la base de datos
+table.headers.indexedDB.objectStore=Nombre del objeto almacenado
+table.headers.indexedDB.value=Valor
+table.headers.indexedDB.origin=Origen
 table.headers.indexedDB.version=Versión
+table.headers.indexedDB.objectStores=Almacenes de objetos
+table.headers.indexedDB.keyPath=Clave
+table.headers.indexedDB.autoIncrement=Autoincremento
+table.headers.indexedDB.indexes=Índices
 
 # LOCALIZATION NOTE (label.expires.session):
 # This string is displayed in the expires column when the cookie is Session
 # Cookie
+label.expires.session=Sesión
 
 # LOCALIZATION NOTE (storage.search.placeholder):
 # This is the placeholder text in the sidebar search box
+storage.search.placeholder=Filtro de valores
 
 # LOCALIZATION NOTE (storage.data.label):
 # This is the heading displayed over the item value in the sidebar
@@ -76,3 +108,4 @@ storage.data.label=Datos
 
 # LOCALIZATION NOTE (storage.parsedValue.label):
 # This is the heading displayed over the item parsed value in the sidebar
+storage.parsedValue.label=Valor interpretado
