--- a/es-MX/browser/chrome/browser/devtools/webconsole.properties
+++ b/es-MX/browser/chrome/browser/devtools/webconsole.properties
@@ -249,6 +249,11 @@ messageToggleDetails=Mostrar/hide detalles del mensaje.
 # #1 number of empty slots
 # example: 1 empty slot
 # example: 5 empty slots
+emptySlotLabel=#1 ranura vacía;#1 ranuras vacías
 
 # LOCALIZATION NOTE (table.index, table.iterationIndex, table.key, table.value):
 # the column header displayed in the console table widget.
+table.index=(índice)
+table.iterationIndex=(índice de iteración)
+table.key=Clave
+table.value=Valores
