--- a/es-MX/browser/chrome/browser/devtools/webide.properties
+++ b/es-MX/browser/chrome/browser/devtools/webide.properties
@@ -2,22 +2,36 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+title_noApp=Firefox WebIDE
+title_app=Firefox WebIDE: %S
 
+runtimeButton_label=Seleccionar tiempo de ejecución
+projectButton_label=Abrir aplicación
 
 mainProcess_label=Proceso principal
 
 
 
+notification_showTroubleShooting_accesskey=t
 
 # These messages appear in a notification box when an error occur.
 
+error_cantInstallNotFullyConnected=No se puede instalar el proyecto. No está completamente conectado.
+error_cantInstallValidationErrors=No se puede instalar el proyecto. Existen errores de validación.
+error_listRunningApps=No se puede obtener la lista de aplicaciones del dispositivo
 
 # Variable: name of the operation (in english)
+error_operationTimeout=La operación ha excedido el tiempo límite: %1$S
+error_operationFail=La operación ha fallado: %1$S
 
 # Variable: app name
+error_cantConnectToApp=No se puede conectar a la aplicación: %1$S
 
 # Variable: error message (in english)
+error_cantFetchAddonsJSON=No se puede obtener la lista de complementos: %S
 
+addons_stable=estable
+addons_unstable=inestable
 # LOCALIZATION NOTE (addons_simulator_label): This label is shown as the name of
 # a given simulator version in the "Manage Simulators" pane.  %1$S: Firefox OS
 # version in the simulator, ex. 1.3.  %2$S: Simulator stability label, ex.
@@ -26,5 +40,12 @@ addons_install_button=instalar
 addons_uninstall_button=desinstalar
 addons_status_installed=Instalado
 
+runtimedetails_checkunkown=desconocido
+runtimedetails_notUSBDevice=No es un dispositivo USB
 
 # Validation status
+status_tooltip=Estado de validación: %1$S
+status_valid=VALID
+status_warning=WARNINGS
+status_error=ERRORS
+status_unknown=UNKNOWN
