--- a/es-MX/browser/chrome/browser/lightweightThemes.properties
+++ b/es-MX/browser/chrome/browser/lightweightThemes.properties
@@ -2,7 +2,10 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+lightweightThemes.recommended-1.name=A Web Browser Renaissance
+lightweightThemes.recommended-1.description=A Web Browser Renaissance es (C) de Sean.Martell. Disponible bajo CC-BY-SA. Sin garantía.
 
+lightweightThemes.recommended-2.name=Space Fantasy
 
 
 
