[hy-AM] update from Pootle (firefox)

--- a/hy-AM/browser/installer/mui.properties
+++ b/hy-AM/browser/installer/mui.properties
@@ -21,7 +21,7 @@
 # You can use \n to create a newline in the string but only when the string
 # from en-US contains a \n.
 
-MUI_TEXT_WELCOME_INFO_TITLE=Բարի Գալուստ $BrandFullNameDA-ը տեղադրելու օգնական
+MUI_TEXT_WELCOME_INFO_TITLE=Բարի Գալուստ $BrandFullNameDA-ը տեղակայելու օգնական
 MUI_TEXT_WELCOME_INFO_TEXT=Այս ծրագիրը կուղեկցի ձեզ $BrandFullNameDA-ը ձեր համակարգչում տեղադրելու ընթացքում:\n\nՍկսելուց առաջ խորհուրդ է տրվում փակել մնացած բոլոր ծրագրերը: Դա հնարավորություն կտա առանց համակարգիչը վերագործարկելու կատարել անհրաժեշտ փոփոխությունները համակարգում:\n\n$_CLICK
 MUI_TEXT_COMPONENTS_TITLE=Ընտրեք բաղադրիչները
 MUI_TEXT_COMPONENTS_SUBTITLE=Ընտրեք $BrandFullNameDA-ի հնարավորությունները, որոնք ցանկանում էք տեղակայել:
