--- a/hy-AM/browser/installer/nsisstrings.properties
+++ b/hy-AM/browser/installer/nsisstrings.properties
@@ -34,7 +34,7 @@ WARN_MANUALLY_CLOSE_APP_LAUNCH=$BrandShortName-ը արդեն աշխատում է
 ERROR_DOWNLOAD=Բեռնումը ընդհատվել է:\n\nՇարունակելու համար սեղմեք ԼԱՎ:
 
 INSTALL_BUTTON=&Տեղակայել
-UPGRADE_BUTTON=&Թարմացնել
+UPGRADE_BUTTON=&Արդիացնել
 CANCEL_BUTTON=Չեղարկել
 OPTIONS_BUTTON=&Ընտրանքներ
 
