--- a/hy-AM/webapprt/webapprt/webapp.properties
+++ b/hy-AM/webapprt/webapprt/webapp.properties
@@ -40,6 +40,10 @@ webapps.install.title=Տեղադրել %S
 webapps.install.description=Ցանկանու՞մ եք տեղակայել %S։
 webapps.install.install=Տեղադրել ծրագիր
 webapps.install.dontinstall=Չտեղակայել
+# LOCALIZATION NOTE (webapps.uninstall.title): %S will be replaced with the name
+# of the webapp being uninstalled.
+# LOCALIZATION NOTE (webapps.uninstall.description): %S will be replaced with the
+# name of the webapp being uninstalled.
 
 paymentDialog.title=Վճար
 paymentDialog.message=Վճարման ո՞ր համակարգն եք նախընտրում:
