--- a/hy-AM/browser/chrome/browser/browser.properties
+++ b/hy-AM/browser/chrome/browser/browser.properties
@@ -74,7 +74,6 @@ lwthemeInstallRequest.allowButton.accesskey=a
 
 lwthemePostInstallNotification.message=Նոր թեման տեղադրվեց:
 lwthemePostInstallNotification.undoButton=Հետ քայլ
-lwthemePostInstallNotification.undoButton.accesskey=U
 lwthemePostInstallNotification.manageButton=Թեմաների կառավարում…
 lwthemePostInstallNotification.manageButton.accesskey=Թ
 
@@ -97,6 +96,9 @@ popupBlock=Արգելել ինքնաելիցներ %S-ից
 popupWarningDontShowFromMessage=Այս հաղորդագրությունը ինքնաելից արգելելի սայլևս ցույց չտալ
 popupWarningDontShowFromLocationbar=Չցուցադրել տեղեկատվական պատուհանը, երբ Pop-up-երը կասեցվում են
 popupShowPopupPrefix=Ցուցադրել '%S'
+
+# Bad Content Blocker Doorhanger Notification
+# %S is brandShortName
 
 # missing plugin installer
 installPlugin.message = Ցանկանու՞մ եք տեղակայել անհրաժեշտ բաղադրիչը տվյալ էջում մեդիան դիտելու համար:               \u0020
@@ -439,6 +441,7 @@ webapps.install.accesskey = I
 webapps.requestInstall = Տեղակայե՞լ "%1$S"-ը (%2$S) կայքից։
 webapps.install.success = Տեղակայված ծրագրերը
 webapps.install.inprogress = Տեղադրվում է
+#LOCALIZATION NOTE (webapps.requestUninstall) %1$S is the web app name
 
 # LOCALIZATION NOTE (fullscreen.entered): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
 fullscreen.entered=%S-ը այժմ Լիաէկրան է:
@@ -499,6 +502,11 @@ getUserMedia.shareMicrophone.message = Թույլատրե՞լ %S-ին մուտք
 getUserMedia.shareCameraAndMicrophone.message = Թույլատրե՞լ %S-ին մուտքը ձեր ապարատին և բարձրախոսին:
 getUserMedia.noVideo.label = Չկա տեսապատկեր
 getUserMedia.noAudio.label = Չկա ձայն
+# LOCALIZATION NOTE (getUserMedia.shareApplicationWindowCount.label):
+# Semicolon-separated list of plural forms.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# Replacement for #1 is the name of the application.
+# Replacement for #2 is the number of windows currently displayed by the application.
 # LOCALIZATION NOTE (getUserMedia.shareSelectedDevices.label):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -519,13 +527,19 @@ getUserMedia.continueSharing.accesskey = Շ
 getUserMedia.stopSharing.label = Կանգնեցնել տարածումը
 getUserMedia.stopSharing.accesskey = Կ
 
-# Mixed Content Blocker Doorhanger Notification
-# LOCALIZATION NOTE - %S is brandShortName
-mixedContentBlocked.message = %S-ը արգելափակել է ոչ անվտանգ բովանդակությունը:
-mixedContentBlocked.keepBlockingButton.label = Շարունակել արգելքը
-mixedContentBlocked.keepBlockingButton.accesskey = ա
-mixedContentBlocked.unblock.label = Անջատել պաշտպանությունը այս էջից
-mixedContentBlocked.unblock.accesskey = Ա
+# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
+#                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
+#                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
+#                    getUserMedia.sharingMenuCameraMicrophone,
+#                    getUserMedia.sharingMenuCameraMicrophoneApplication,
+#                    getUserMedia.sharingMenuCameraMicrophoneScreen,
+#                    getUserMedia.sharingMenuCameraMicrophoneWindow,
+#                    getUserMedia.sharingMenuMicrophoneApplication,
+#                    getUserMedia.sharingMenuMicrophoneScreen,
+#                    getUserMedia.sharingMenuMicrophoneWindow):
+# %S is the website origin (e.g. www.mozilla.org)
+# LOCALIZATION NOTE(getUserMedia.sharingMenuUnknownHost): this is used for the website
+# origin for the sharing menu if no readable origin could be deduced from the URL.
 
 # LOCALIZATION NOTE - %S is brandShortName
 slowStartup.message = %S-ը կարծես դանդաղ է… բացվում:
