--- a/hy-AM/browser/chrome/browser/devtools/toolbox.properties
+++ b/hy-AM/browser/chrome/browser/devtools/toolbox.properties
@@ -41,6 +41,10 @@ toolbox.titleTemplate=%1$S - %2$S
 # for the options panel tab.
 optionsButton.tooltip=Գործիքների Ընտրանքներ
 
+# LOCALIZATION NOTE (options.label): This is used as the label of the tab in
+# the devtools window.
+options.label=Կարգավորումներ
+
 # LOCALIZATION NOTE (options.panelLabel): This is used as the label for the
 # toolbox panel.
 
@@ -63,3 +67,11 @@ browserConsoleCmd.commandkey=j
 # LOCALIZATION NOTE (pickButton.tooltip)
 # This is the tooltip of the pick button in the toolbox toolbar
 pickButton.tooltip=Ընտրեք բաղադրիչ էջից
+
+# LOCALIZATION NOTE (options.darkTheme.label)
+# Used as a label for dark theme
+options.darkTheme.label=Մթոտ (մռայլ) թեմա
+
+# LOCALIZATION NOTE (options.lightTheme.label)
+# Used as a label for light theme
+options.lightTheme.label=Պայծառ (լուսավոր) թեմա
