--- a/hy-AM/browser/chrome/browser/newTab.properties
+++ b/hy-AM/browser/chrome/browser/newTab.properties
@@ -5,6 +5,20 @@
 newtab.pin=Գամել այս կայքը այս դիրքով
 newtab.unpin=Ապագամել այս կայքը
 newtab.block=Հեռացնել այս կայքը
-newtab.show=Ցուցադրել Նոր ներդիր էջը
-newtab.hide=Թաքցնել նոր ներդիրի էջը
-newtab.sponsored=Ցուցադրել տեղեկություն հովանավորների սանդղակում
+# LOCALIZATION NOTE(newtab.sponsored.button): This text appears for sponsored
+# and enhanced tiles on the same line as the tile's title, so prefer short
+# strings to avoid overlap. This string should be uppercase.
+# LOCALIZATION NOTE(newtab.sponsored.explain): %1$S will be replaced inline by
+# the (X) block icon. %2$S will be replaced by an active link using string
+# newtab.learn.link as text.
+# LOCALIZATION NOTE(newtab.enhanced.explain): %1$S will be replaced inline by
+# the gear icon used to customize the new tab window. %2$S will be replaced by
+# an active link using string newtab.learn.link as text.
+# LOCALIZATION NOTE(newtab.intro.paragraph1): %1$S will be replaced inline by
+# active link using string newtab.learn.link as text.
+# LOCALIZATION NOTE(newtab.intro.paragraph2): %1$S will be replaced inline by
+# active link using string newtab.privacy.link as text.
+# LOCALIZATION NOTE(newtab.intro.paragraph3): %1$S will be replaced inline by
+# the gear icon used to customize the new tab window.
+newtab.learn.link=Իմանալ ավելին…
+newtab.privacy.link=Գաղտնիության Դրույթները
