--- a/hy-AM/browser/chrome/browser/shellservice.properties
+++ b/hy-AM/browser/chrome/browser/shellservice.properties
@@ -4,10 +4,15 @@
 
 optionsLabel=%S-ի &Կարգավորումները
 safeModeLabel=%S-ի &Հուսալի Աշխատակերպ
-setDefaultBrowserTitle=Հիմնական դիտարկիչը
-setDefaultBrowserMessage=%S-ը տվյալ պահին ձեր հիմնական դիտարկիչը չէ. Կցանկանայի՞ք այս ծրագիրը օգտագործել որպես հիմնական դիտարկիչ:
-setDefaultBrowserDontAsk=%S-ը գործարկելիս միշտ ստուգել:
-alreadyDefaultBrowser=%S­-ը արդեն իսկ հիմնական դիտարկիչն է:
+
+# LOCALIZATION NOTE (setDefaultBrowserMessage2, setDefaultBrowserConfirm.label):
+# %S will be replaced by brandShortName
+setDefaultBrowserOptions.label     = Կարգավորումներ
+setDefaultBrowserOptions.accesskey = Կ
+setDefaultBrowserNever.label       = Այլևս չհարցնել
+setDefaultBrowserNever.accesskey   = Ա
+
+
 desktopBackgroundLeafNameWin=Աշխատանքային սեղանի միջավայրը՝ *.bmp
 DesktopBackgroundDownloading=Պահպանում եմ նկարը
 DesktopBackgroundSet=Դնել Աշխատասեղանի Աստառը
