--- a/hy-AM/browser/installer/custom.properties
+++ b/hy-AM/browser/installer/custom.properties
@@ -80,4 +80,4 @@ OPTION_CUSTOM_RADIO=&Յուրահատուկ
 # The following text replaces the Install button text on the summary page.
 # Verify that the access key for InstallBtn (in override.properties) and
 # UPGRADE_BUTTON is not already used by SUMMARY_TAKE_DEFAULTS.
-UPGRADE_BUTTON=&Թարմացնել
+UPGRADE_BUTTON=&Արդիացնել
