--- a/hy-AM/dom/chrome/accessibility/AccessFu.properties
+++ b/hy-AM/dom/chrome/accessibility/AccessFu.properties
@@ -7,72 +7,12 @@ screenReaderStarted = Սկսել էկրանից ընթերցումը
 screenReaderStopped = Ավարտել էկրանից ընթերցումը
 
 # Roles
-menubar        =       ընտրացանկ վահանակը
-scrollbar      =       ոլորագոտի
-grip           =       grip
-alert          =       տագնապ
-menupopup      =       ելնող ընտրացանկ
-document       =       փաստաթուղթ
-pane           =       վահանակ
-dialog         =       պատուհան
-separator      =       բաժանիչ
-toolbar        =       գործիքների վահանակ
-statusbar      =       Կարգավիճակի տող
 table          =       աղյուսակ
-columnheader   =       սյան էջագլուխ
-rowheader      =       տողի էջագլուխ
-column         =       սյուն
-row            =       տող
-cell           =       բջիջ
 link           =       հղում
-list           =       ցանկ
-listitem       =       ցանկի տարրը
-outline        =       շրջանակ
-outlineitem    =       շրջանակի տարրը
-pagetab        =       ներդիրը
-propertypage   =       հատկության էջը
-graphic        =       գրաֆիկա\u0020
 pushbutton     =       կոճակ
-checkbutton    =       նշումով կոճակ
-radiobutton    =       ռադիոկոճակ
-combobox       =       կոմբոպատուհան
-progressbar    =       կատարման վահանակ
-slider         =       սահիչ
-spinbutton     =       պտտման կոճակ
-diagram        =       գծանկար
-animation      =       շարժապատկերում
-equation       =       հավասարեցում
-buttonmenu     =       ցանկի կոճակը
-whitespace     =       բացատ
-pagetablist    =       ներդիրների ցանկը
-canvas         =       կտավ
-checkmenuitem  =       նշատուփերի տարր
-label          =       պիտակ
 passwordtext   =       գաղտնաբառի տեքստը
-radiomenuitem  =       ռադիոցանկի տարր
-textcontainer  =       տեքստի պարունակ
-togglebutton   =       փոխանջատիչ կոճակ
-treetable      =       ծառի աղյուսակը
-header         =       էջագլուխ
-footer         =       էջատակ
-paragraph      =       պարբերություն
-entry          =       գրառում
-caption        =       վերնագիր
-heading        =       գլխամաս
-section        =       բաժին
-form           =       ձև
-comboboxlist   =       կոմբո պատուհանի ցանկ
-comboboxoption =       կոմբոպատուհանի ընտրանք
 imagemap       =       նկարի քարտեզ
-listboxoption  =       ընտրանք
-listbox        =       ցանկի պատուհան
-flatequation   =       հարթ կառավարում
-gridcell       =       ցանցի բջիջ
-note           =       նշում
 figure         =       պատկեր
-definitionlist =       որոշիչների ցանկը
-term           =       տերմին
-definition     =       որոշիչ
 
 # More sophisticated roles which are not actual numeric roles
 textarea       =       տեքսի դաշտը
@@ -94,11 +34,9 @@ listEnd        =       Վերջին տարրը
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 listItemsCount =       1 տարր;#1 տարր
 
-# LOCALIZATION NOTE: %1$S is the item's role name (e.g. "tab"),
-# %2$S is the position of the item n the set.
-# %3$S is the total number of such items in the set.
-# An expanded example would read "tab 2 of 5".
-objItemOf      =       %1$S՝ %2$S %3$S-ից
+# LOCALIZATION NOTE: # %1$S is the position of the item n the set.
+# %2$S is the total number of such items in the set.
+# An expanded example would read "2 of 5".
 
 # Landmark announcements
 banner         =       բաններ
@@ -108,17 +46,12 @@ main           =       հիմնականը
 navigation     =       ուղղորդում
 search         =       փնտրել
 
-# Description of a table or grid:
-# 1 is a dynamically retrieved localized role of either 'table' or 'grid'.
-# 2 is the number of columns within the table.
-# 3 is the number of rows within the table or grid.
-tableInfo = %S՝ %S-ով և %S-ով
-# LOCALIZATION NOTE (tableColumnInfo): Semi-colon list of plural forms.
+# LOCALIZATION NOTE (tblColumnInfo): Semi-colon list of plural forms.
+# Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableColumnInfo = 1 սյուն;#1 սյուներ
-# LOCALIZATION NOTE (tableRowInfo): Semi-colon list of plural forms.
+# LOCALIZATION NOTE (tblRowInfo): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableRowInfo = 1 տող;#1 տողեր\u0020
 
 # table or grid cell information
 columnInfo = Սյուն %S
@@ -190,18 +123,21 @@ quicknav_Table       = Աղյուսակներ
 quicknav_Checkbox    = Նշատուփեր
 
 # Shortened role names for braille
+tableAbbr          =       tbl
 linkAbbr           =       lnk
 pushbuttonAbbr     =       btn
 passwordtextAbbr   =       passwdtxt
 imagemapAbbr       =       imgmap
 figureAbbr         =       fig
 textareaAbbr       =       txtarea
-tableAbbr          =       tbl
-tableInfoAbbr = %S %S %S
-# LOCALIZATION NOTE (tableColumnInfoAbbr): Semi-colon list of plural forms.
+
+# LOCALIZATION NOTE (tblColumnInfoAbbr): Semi-colon list of plural forms.
+# Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableColumnInfoAbbr = #1c;#1c
-# LOCALIZATION NOTE (tableRowInfoAbbr): Semi-colon list of plural forms.
+tblColumnInfoAbbr = #1c;#1c
+# LOCALIZATION NOTE (tblRowInfoAbbr): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableRowInfoAbbr = #1r;#1r
+tblRowInfoAbbr = #1r;#1r
 cellInfoAbbr = c%Sr%S
+
